# manga-viewer

./: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.vue  components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src-tauri/src/app/: cmd.rs
src/api/: auth.ts
src/components/: Logo.vue  MangaInfoItem.vue  Navbar.vue  SearchInput.vue
src/constants/: sites.constant.ts
src/enums/: http.ts
src/layouts/: default.vue  login.vue
src/pages/: index.vue
src/styles/: global.css
src/utils/: index.ts  request.ts
types/: gloab.d.ts  index.d.ts
