[package]
name = "manga-viewer"
version = "0.0.1"
description = "A manga viewer application"
authors = ["ppxb <ppxb123@gmail.com>"]
license = "MIT"
repository = "https://github.com/ppxb/manga-viewer"
edition = "2021"
rust-version = "1.77"


[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = ['shell-open-api'] }
reqwest = { version = "0.12.3", features = ["stream"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
